# db-api-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  README_zh_CN.md  data.db  data.db-shm  data.db-wal  docker-compose.yml  seed_demo_api.sql  seed_mysql_demo_api.sql  seed_pg_demo_api.sql  test_parser.rs  test_sqlparser.rs
.github/workflows/: build-binaries.yml  release.yml
docs/: README.md  index.md
docs/superpowers/: NEXT.md
docs/wiki/: API-Design-Standard.md  Agent-and-MCP-Workflow.md  Bundle-Review-Checklist.md  Datasource-Management.md  Environment-Promotion.md  FAQ.md  GitOps-Workflow.md  Home.md  Operations-and-Audit.md  SQL-and-Query-Safety.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  styles.css
runtime-rust/: Cargo.toml  Dockerfile  seed_demo_api.sql
runtime-rust/frontend/: index.html  package-lock.json  package.json
runtime-rust/src/: api_config_handler.rs  basic_handler.rs  datasource_handler.rs  db.rs  form.rs  handler.rs  main.rs  model.rs  pool_manager.rs  query_builder_handler.rs  query_dsl.rs  repository.rs  response.rs  sql_engine.rs  view_sql.rs
runtime-rust/static/: index.html
skills/: index.json
skills/dbapi-apply-api-bundle/: SKILL.md
skills/dbapi-demo-crud/: SKILL.md
skills/dbapi-export-import-workflow/: SKILL.md
skills/dbapi-generate-sql-api/: SKILL.md
skills/dbapi-generate-table-apis/: SKILL.md
skills/dbapi-token-workflow/: SKILL.md
src/: api_config_handler.rs  app.rs  basic_handler.rs  bundle_files.rs  cli.rs  datasource_handler.rs  db.rs  dbapi_client.rs  handler.rs  main.rs  manifest.rs  manifest_generator.rs  manifest_validator.rs  mcp_server.rs  model.rs  pool_manager.rs  query_dsl.rs  repository.rs  schema.rs  sql_engine.rs
static/: index.html
static/assets/: index-BImxjHoU.css  index-B_IPApmy.css  index-C5z0Gymd.js  index-C6xdoIz4.css  index-CQs1o43M.js  index-Cc31Ip9F.css  index-DBXgFlt4.css  index-DH8j5jGu.js  (+5 more)
(+77 files in other folders)
