[package]
name = "db-api-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "with-json", "with-chrono"] }
sea-query = "0.32.7"
sqlparser = "0.43"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
dashmap = "5.5"
anyhow = "1.0"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
minijinja = { version = "2.19.0", features = ["custom_syntax"] }
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "1.6", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
schemars = { version = "1.0", features = ["derive"] }
tokio-util = "0.7"
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
